--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -7,9 +7,11 @@ on:
 jobs:
   build:
     name: Deploy to GCP
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+    runs-on: ubuntu-latest
+    steps:
+      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
           version: '276.0.0'
           service_account_email: ${{ secrets.GCP_SA_EMAIL }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
-    - run: gsutil -m rsync -d -c -r . gs://j-volpe-com
+      - run: gsutil -m rsync -d -c -r . gs://j-volpe-com
