--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -14,4 +14,4 @@ jobs:
           version: '276.0.0'
           service_account_email: ${{ secrets.GCP_SA_EMAIL }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
-      - run: gsutil -m cp * gs://j-volpe-com//${GITHUB_REF:11}/
+      - run: gsutil -m cp _site gs://j-volpe-com//${GITHUB_REF:11}/
