--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Setup Google Cloud SDK
         run: |
-          echo ${{ secrets.GCP_SA_KEY }} > ./gcloud-service-key.json
+          echo ${{ secrets.GCP_SA_KEY_b64 }} | base64 --decode > ./gcloud-service-key.json
           gcloud auth activate-service-account \
             --key-file=./gcloud-service-key.json
           gcloud --quiet config set project ${GCP_PROJECT_ID}
