--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -14,5 +14,5 @@ jobs:
           echo ${{ secrets.GCP_SA_KEY_b64 }} | base64 --decode > ./gcloud-service-key.json
           gcloud auth activate-service-account \
             --key-file=./gcloud-service-key.json
-          gcloud --quiet config set project ${GCP_PROJECT_ID}
+          gcloud --quiet config set project ${{ secrets.GCP_PROJECT_ID }}
       - run: gsutil rsync _site/ gs://j-volpe-com/_site
