--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -9,6 +9,7 @@ jobs:
     name: Deploy to GCP
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Setup Google Cloud SDK
         run: |
           echo ${{ secrets.GCP_SA_KEY_b64 }} | base64 --decode > ./gcloud-service-key.json
