--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -10,10 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Google Cloud SDK
-        run: |
-          echo ${{ secrets.GCP_SA_KEY_b64 }} | base64 --decode > ./gcloud-service-key.json
-          gcloud auth activate-service-account \
-            --key-file=./gcloud-service-key.json
-          gcloud --quiet config set project ${{ secrets.GCP_PROJECT_ID }}
-      - run: gsutil rsync _site/ gs://j-volpe-com/_site
+      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          version: '276.0.0'
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+      - run: gsutil rsync -r _site gs://j-volpe-com/${GITHUB_REF:11}/_site
