Make the bucket name a secret

--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -12,6 +12,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
-          version: '276.0.0'
+          version: "276.0.0"
           service_account_key: ${{ secrets.GCP_SA_KEY }}
-      - run: gsutil cp -r '*' gs://j-volpe-com/${GITHUB_REF:11}/
+      - run: gsutil cp -r '*' gs://${{ secrets.GCP_BUCKET_NAME }}/${GITHUB_REF:11}/
