--- a/.github/workflows/gcp-deploys-cleanup.yml
+++ b/.github/workflows/gcp-deploys-cleanup.yml
@@ -9,6 +9,6 @@ jobs:
       - name: Clean up deployed branches in GCP
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
-          version: '276.0.0'
+          version: "276.0.0"
           service_account_key: ${{ secrets.GCP_SA_KEY }}
-      - run: gsutil rm -rf gs://j-volpe-com/${{ github.event.ref }}
+      - run: gsutil rm -rf gs://${{ secrets.GCP_BUCKET_NAME }}/${{ github.event.ref }}
