--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,8 @@ jobs:
   deploy_to_gcp:
     docker:
       - image: google/cloud-sdk
+    working_directory: ~/repo
     steps:
-      - echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
-      - gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+      - echo $GCLOUD_SERVICE_KEY | base64 --decode > gcloud-service-key.json
+      - gcloud auth activate-service-account --key-file=gcloud-service-key.json
       - gcloud config set project ${GOOGLE_PROJECT_ID}
