--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,6 @@ jobs:
       - image: google/cloud-sdk
     working_directory: ~/repo
     steps:
-      - echo $GCLOUD_SERVICE_KEY | base64 --decode > gcloud-service-key.json
-      - gcloud auth activate-service-account --key-file=gcloud-service-key.json
-      - gcloud config set project ${GOOGLE_PROJECT_ID}
+      - run: echo ${GCLOUD_SERVICE_KEY} | base64 --decode > gcloud-service-key.json
+      - run: gcloud auth activate-service-account --key-file=gcloud-service-key.json
+      - run: gcloud config set project ${GOOGLE_PROJECT_ID}
