--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           name: "Fill the bucket"
           command: |
             BRANCH_NAME=${CIRCLE_TAG:-$CIRCLE_BRANCH}
-            echo ${GCLOUD_SERVICE_KEY} | base64 --decode > gcloud-service-key.json
-            gcloud auth activate-service-account --key-file=gcloud-service-key.json
+            echo ${GCLOUD_SERVICE_KEY} | base64 --decode > ${HOME}/gcloud-service-key.json
+            gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
             gcloud config set project ${GOOGLE_PROJECT_ID}
             gsutil cp -r '*' gs://${GCP_BUCKET_NAME}/circleci/${BRANCH_NAME}/
